Fix caching problems of low-precision auto brushes with randomness

Random brushes cannot use caching. Well, theoretically, we can do that
as a post-processing, but we'd better just disable caching for such
brushes for now.

BUG:428766