libs/brush/kis_auto_brush.h
@@ -93,6 +93,8 @@ public:
 
     void lodLimitations(KisPaintopLodLimitations *l) const override;
 
+    bool supportsCaching() const override;
+
 private:
 
     QImage createBrushPreview();
